--- a/src/index.css
+++ b/src/index.css
@@ -86,3 +86,10 @@ Icons from Bootstraps
   font-family: 'Oswald';
   src: local('Oswald'), url(./fonts/Oswald/Oswald-VariableFont_wght.ttf) format('truetype');
 }
+
+/* Open Sans */
+
+@font-face {
+  font-family: 'Open_Sans';
+  src: local('Open_Sans'), url(./fonts/Open_Sans/OpenSans-VariableFont_wdth\,wght.ttf) format('truetype');
+}
