Minor updates and changes in README

--- a/src/header/header.css
+++ b/src/header/header.css
@@ -3,6 +3,9 @@
     font-weight: bold;
     font-size: 20px;
     text-align: center;
+}
+
+#Header-container { /* USED TO OVERRIDE BOOTSTRAP STYLING */
     justify-content: center;
 }
 
